--- a/browser-app/package.json
+++ b/browser-app/package.json
@@ -1,28 +1,28 @@
 {
   "private": true,
   "name": "browser-app",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "dependencies": {
     "@theia/core": "latest",
-    "@theia/filesystem": "latest",
-    "@theia/workspace": "latest",
-    "@theia/preferences": "latest",
-    "@theia/navigator": "latest",
-    "@theia/process": "latest",
-    "@theia/terminal": "latest",
     "@theia/editor": "latest",
+    "@theia/filesystem": "latest",
     "@theia/languages": "latest",
     "@theia/markers": "latest",
-    "@theia/monaco": "latest",
-    "@theia/typescript": "latest",
     "@theia/messages": "latest",
-    "che-theia-factory-frontend-extension": "0.0.0"
+    "@theia/monaco": "latest",
+    "@theia/navigator": "latest",
+    "@theia/preferences": "latest",
+    "@theia/process": "latest",
+    "@theia/terminal": "latest",
+    "@theia/typescript": "latest",
+    "@theia/workspace": "latest",
+    "sunix-che-theia-factory-frontend-extension": "^1.0.0"
   },
   "devDependencies": {
     "@theia/cli": "latest"
   },
   "scripts": {
-    "prepare": "theia build",    
+    "prepare": "theia build",
     "start": "theia start",
     "watch": "theia build --watch"
   },
